--- a/templates/formulario_cadastro_BOM.html
+++ b/templates/formulario_cadastro_BOM.html
@@ -33,7 +33,7 @@
     <div class="content">
         <!-- Formulário para envio de dados via Excel -->
         <div class="form-container">
-            <p>O arquivo Excel deve conter apenas uma aba e as seguintes colunas: 'Placa', 'Versao', 'Status', 'Componente', 'Quantidade', 'Designator'.</p>
+            <p>O arquivo Excel deve conter apenas uma aba e as seguintes colunas: 'Placa', 'Versao', 'Status', 'Componente', 'Quantidade', 'Designator'. Deixar sempre PCI na primeira linha da versao</p>
             <form method="POST" action="{{ url_for('BOM.add_BOMs') }}" enctype="multipart/form-data">
                 <label for="file">Selecione um arquivo Excel:</label>
                 <input type="file" name="file" id="file" accept=".xlsx" required>
