--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,48 +7,103 @@
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../static/style.css">
     <title>Estrutura Padrão</title>
+    <style>
+        /* CSS para a animação da mensagem flash */
+
+        .flash-messages ul {
+            list-style: none;  /* Remove as bolinhas da lista */
+            padding: 0;
+            margin: 0;
+        }
+        
+        .flash-messages li {
+            position: fixed;
+            bottom: 70px;
+            right: 20px;
+            background-color: #f8d7da;
+            color: #721c24;
+            padding: 15px;
+            margin: 10px 0;
+            border: 1px solid #f5c6cb;
+            border-radius: 5px;
+            text-align: center;
+            opacity: 0; /* Inicialmente invisível */
+            animation: fadeInOut 2.5s ease-in-out forwards; /* A animação dura 5 segundos */
+        }
+
+        /* Animação de fade in e fade out */
+        @keyframes fadeInOut {
+            0% {
+                opacity: 0;
+            }
+            10% {
+                opacity: 1;
+            }
+            90% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 <body>
-    
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="menu" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('BOM.lista_BOMs') }}">BOMs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('BOM.alternativos_BOM') }}">Alternativos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Edição
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('BOM.form_cadastro_BOM') }}">Adicionar BOM</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('BOM.form_edit_BOM') }}">Editar BOM</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('BOM.form_cadastro_BOM') }}">Excluir BOM</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Evolução</a></li>
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('BOM.lista_BOMs') }}">BOMs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('BOM.alternativos_BOM') }}">Alternativos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Edição
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('BOM.form_cadastro_BOM') }}">Adicionar BOM</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('BOM.form_cadastro_BOM') }}">Editar BOM</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('BOM.form_cadastro_BOM') }}">Excluir BOM</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Evolução</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
-      </nav>
+
+        
+    </nav>
 
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../static/script.js"></script>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <div class="flash-messages">
+              <ul>
+                  {% for message in messages %}
+                      <li>{{ message }}</li>
+                  {% endfor %}
+              </ul>
+          </div>
+      {% endif %}
+    {% endwith %}
+
 </body>
 </html>
